# mkimage-profiles

./: .gitignore  Makefile  Makefile.asciidoc  QUICKSTART  README  README.asciidoc  TODO  VERSION  clean.mk  configure  configure.ac  distro.mk  fop.xconf  functions.mk  iso.mk  libdistro.mk  log.mk  main.mk  mkimage-profiles.asciidoc  profile.mk  reports.mk
.gear/: mkimage-profiles.spec  rules
.gear/tags/: list
.mki/: topdir
conf.d/: Makefile  README  a11y.mk  alien.mk  alt-platform-builder.mk  alt-server.mk  armh.mk  basealt.mk  desktop.mk  e2k.mk  education.mk  engineering.mk  homeros.mk  kworkstation.mk  live.mk  mixin-alt-server.mk  mixin-basealt.mk  mixin.mk  mobile.mk  p7.mk  p8.mk  p9.mk  phone.mk  realtime.mk  regular-vm.mk  regular.mk  server-v.mk  server.mk  simply.mk  slinux.mk  t6.mk  t7.mk  test.mk  ve.mk  vm.mk
distro/: Makefile
doc/: .fop.xconf  .gitignore  CodingStyle  Makefile  apt.conf.sample  archdep.txt  arm.txt  assumptions.txt  branch.txt  debug.txt  features.txt  gen-asciidoc.txt  metadep.txt  mkimage-profiles.7  mkimage-profiles.7.in  mkimage-profiles.asciidoc  params.txt  pkglists.txt  profiles.mk.sample  qemu.txt  style.txt  variables.txt  vm.txt
features.in/: Makefile  README
features.in/00example/: README  README.en  config.mk  generate.mk  generate.sh
features.in/aarch64-dbm/: README  config.mk
features.in/aarch64-rpi4/: README  config.mk
features.in/aarch64-tegra/: README  config.mk
features.in/alt-components/: README  config.mk
features.in/alternatives/: README  config.mk
features.in/apt-conf/: README  config.mk
features.in/arm-rpi4/: README  config.mk
features.in/armh/: README  config.mk
features.in/armh-cubox/: README  config.mk
features.in/armh-dovefb/: README  config.mk
features.in/armh-mcom02/: README  config.mk
features.in/armh-nexus7/: README  config.mk
features.in/armh-skit/: README  config.mk
features.in/armh-tegra3/: README  config.mk
features.in/auto-resize/: README  config.mk
features.in/bootloader/: README  config.mk
features.in/branding/: README  config.mk
features.in/browser/: README  config.mk
features.in/build-distro/: README  config.mk
features.in/build-ve/: README  config.mk
image/: Makefile  functions.mk  initfs  modules
image.in/: .gitignore  Makefile  README  configure.ac  functions.mk  globals.mk.in  vars.mk
image.in/files/syslinux/: isolinux.cfg
image.in/image-scripts.d/: 01-rootdir  09-tcb-fix  40-vconsole-setup  99-set-adjtime
image.in/install2/: Makefile
image.in/isodata/syslinux/: isolinux.cfg
image.in/main/: Makefile
image.in/scripts.d/: 00-cleanup  01-genbasedir
lib/: README  boot.mk  build.mk  check.mk  clean.mk  common.mk  distro.mk  functions.mk  help.mk  kernel.mk  log.mk  profile.mk  report.mk  sugar.mk  ve.mk  vm.mk
pkg/: Makefile
pkg.in/: Makefile  README
sub.in/: Makefile  README
(+1676 files in other folders)
